# MULTI-OTO

./: CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: ADAASaturator.h  Crossover.cpp  Crossover.h  DynamicsNode.cpp  DynamicsNode.h  EngineCore.cpp  EngineCore.h  FastMath.h  Saturator.h
Source/GUI/: MinimalUI.cpp  MinimalUI.h
